{
    "name": "InputControl",
    "maps": [
        {
            "name": "Player",
            "id": "52390e74-9b1e-4300-92cd-16df413949e4",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "7775e0fc-c8c4-465e-a256-f8611a9c187a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "GoUp",
                    "type": "Button",
                    "id": "faa55006-e416-42be-ab5c-918b52485bcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "a9dc7e2c-b3e7-4466-9dd6-39eecba51c41",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e7fd6cd-7063-487d-9430-62d61305d763",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "50ff450e-7ecb-4ba5-84db-c442d0d0c948",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3c90a5a1-20de-428d-aa3a-e0c2b4009c2c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}